update from contacts

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diokou Tech</title>
+    <title>Diokou Tech - The developer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -63,18 +62,17 @@
                             title="Photo de Cheikhou"> </h2>
                     <h1>Hi I'm Web Developer <small class="text-black">Full Stack</small></h1>
                     <h3>
-                        <cite> " Je n'ai vas pas travailler pour l'argent mais je ne travaillerai pas pour rien. Je suis
-                            toujours en train d'apprendre quelque chose "</cite> <b> Charles Aznavour</b>
+                        <cite> " Je n'ai vas pas travailler pour de l'argent mais je ne travaillerai pas pour rien. Je suis
+                            toujours en train d'apprendre quelque chose "</cite> <b style="margin-left:10px;color:rgb(134, 111, 111)"> Charles Aznavour</b>
                     </h3>
                 </div>
                 <div class="desc animate__animated animate__fadeInRight">
                     <p style="color:black">
-                        DIOKOU Cheikhou de mon vrai nom, Zola mon surnom depuis tout petit. Enfant j'ai toujours été
+                        DIOKOU Cheikhou de mon vrai nom, Zola mon surnom depuis tout petit. Lycéen j'ai toujours été
                         passionné des nouvelles technologies et du numérique.
                         Depuis le collège j'ai toujours été persuadé que le futur dépend du numérique et de ce qu'on
                         fait de cet outil si précieux.
                     </p>
-                    <hr width="60">
                     <p>
                         <span title="Sonatel Academy">#CodingForBetterLife</span>
                         <span title="Edacy">#AspireFarther</span>
@@ -85,7 +83,7 @@
         </header>
     </div>
     <!-- services -->
-    <h1 class="titre flex justify-evenly items-center">
+    <h1 class="titre flex justify-evenly items-center" align="center"c>
         <img src="./img/services.svg" width="200" alt="">
         <span>Ce que je peux vous offrir !</span>
     </h1>
@@ -93,7 +91,6 @@
         <div class="card animate__animated animate__fadeIn">
             <h2>Solutions numériques</h2>
             <ul>
-                <li>Site Vitrine</li>
                 <li>Site Web</li>
                 <li>Application Web</li>
                 <li>Apis Web</li>
@@ -124,11 +121,9 @@
         <img src="./img/stack.svg" width="200" alt="">
         <span>Mon plat préféré !</span>
     </h1>
-    <p class="container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit laborum, quisquam, excepturi ratione nesciunt
-        minima voluptatibus vel accusamus deleniti fugiat amet earum, fugit rerum deserunt sequi unde qui? Fugiat,
-        asperiores!
-    </p>
+<p align="center">
+    Ceux sont les différents technologies que j'utilise pour concevoir mes applications ou sites web. Les technologies utilisés dépendent en grande partie du types de projets.
+</p>
     <div class="flex justify-evenly items-center" id="stack">
         <div class="stack">
             <img src="/img/logo_php.jpg" width="80px" height="80px" title="Php" alt="">
@@ -147,13 +142,28 @@
             <img src="/img/nodejs.png" width="80px" height="80px" title="Node Js" alt="">
         </div>
         <div class="stack">
-            <img src="/img/nest.png" width="100px" height="80px" title="Nest Js" alt="">
+            <img src="/img/nest.png" width="90px" height="80px" title="Nest Js" alt="">
         </div>
         <div class="stack">
             <img src="/img/mng.png" width="80px" height="80px" title="BAse de données MongoDB" alt="">
         </div>
         <div class="stack">
             <img src="/img/mysql.png" width="80px" height="80px" title="Mysql" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/logo html.png" width="80px" height="80px" title="HTML" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/logo css.webp" width="80px" height="80px" title="CSS" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/logo github.png" width="90px" height="80px" title="GitHub" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/bootstrap.jpg" width="80px" height="80px" title="Boostrap" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/tailwind.png" width="95px" height="80px" title="TailwindCSS" alt="">
         </div>
     </div>
     <!-- Projet -->
@@ -165,36 +175,33 @@
         <div class="card">
             <h2>Niama App</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ducimus expedita dolores voluptatum ea
-                delectus. Consequatur, ut eius rem temporibus nihil unde? Facere aut a corporis reiciendis saepe id
-                labore.
-                Eos in corrupti optio expedita. Repellat unde laudantium doloribus deserunt ipsum debitis culpa dolor
-                similique sequi provident, quam enim in laborum ab deleniti reiciendis qui architecto, possimus
-                repudiandae, soluta commodi!
-                Dolorem totam voluptatum inventore, optio reprehenderit nostrum unde perferendis, excepturi odit labore
-                dignissimos enim consectetur non, omnis alias libero aliquid quas esse. Asperiores at, nostrum officiis
-                perferendis eveniet quae eligendi!
+                Dans le cadre de mon projet de mémoire de master II. J'avais développé une application qui permettrait de gérer la gestion des faits d'état civil dans une mairie.
+                Avec cette plateforme on pouvait enregistrer toutes les déclarations de naissance, de mariage et de décès.On peut  faire les impressions des différents extraits notamment les extraits de naissance , certificat de mariage, etc.
             </p>
+            <div class="flex justify-between">
+                <!-- <span><a href="#" target="_blank"> <i class="fa-solid fa-globe"></i> </a></span> -->
+                <span><a href="https://github.com/Diokou-Tech/Niama" target="_blank"> <i class="fa-solid fa-link"></i> </a></span>
+            </div>
         </div>
         <div class="card">
             <h2>Nekk Dev</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At id enim odio repellendus provident natus sunt reprehenderit? Consectetur ad corrupti suscipit officiis quam. Error iste quae voluptatem sint dicta doloremque.
-                Eum, praesentium! Quasi tempora quis ratione perspiciatis dicta nihil amet libero hic quod eos, architecto optio dolorem impedit iusto non porro sint, enim repudiandae! Molestias voluptates iste quisquam qui laborum.
-                Culpa modi perspiciatis odit aut libero tenetur architecto nulla, vitae sunt, exercitationem odio explicabo unde non quidem vero necessitatibus quae velit sed blanditiis quasi distinctio, eius a voluptatum deleniti? Aut!
+                Elle est toujours en cours de développement. Cette plateforme permettra de regrouper les développeurs africains surtout sénégalais. Cet site sera en quelque sorte une de stackverflow personnel combiné à OpenCLassroom. Let's GO.
             </p>
-            <p>
-                <span><a href="#"> <i class="fa-solid fa-link"></i> </a></span>
-                
-            </p>
+            <div class="flex justify-between">
+                <!-- <span><a href="" title="lien du site"> <i class="fa-solid fa-globe"></i> </a></span>
+                <span><a href="" title="lien github"> <i class="fa-solid fa-link"></i> </a></span> -->
+            </div>
         </div>
         <div class="card">
             <h2>Lemgui</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eaque amet quis aut voluptatem eum, perferendis corporis placeat, quisquam fugiat distinctio earum esse temporibus enim rem illo quos obcaecati commodi.
-                Maxime dolorum voluptates praesentium eius fuga illum esse ducimus modi quasi. Exercitationem consectetur nesciunt tenetur ducimus iste esse animi ea aut fuga hic maiores, iure, accusamus tempora tempore consequuntur aspernatur.
-                Eum iure eligendi similique? Nulla facere cumque dicta rerum, porro atque non voluptates possimus natus deleniti optio consectetur corporis accusantium obcaecati et error. Corporis hic voluptas voluptates sapiente dolorum fugiat?
+              A travers la formation en développement web de la sonatel academy, on nous avait demander de reproduire un site en nous donnant le lien du site.
             </p>
+            <div class="flex justify-between">
+                <span><a href="https://lemgui.vercel.app/" target="_blank" title="lien du site"> <i class="fa-solid fa-globe"></i> </a></span>
+                <span><a href="https://github.com/Diokou-Tech/lemgui" title="lien github" target="_blank"> <i class="fa-solid fa-link"></i> </a></span>
+            </div>
         </div>
     </div>
     <!-- contact -->
@@ -226,31 +233,6 @@
     <footer>
         <h5 class="footer">&copy; Diokou Cheikhou - 2022</h5>
     </footer>
+    <script src="js/script.js" defer></script>
 </body>
-<script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    function toggle() {
-        let menu = document.getElementsByClassName('menu')[0];
-        menu.classList.toggle('block');
-    }
-    body = document.body;
-    let hTotal = body.scrollHeight;
-    // console.log(parseInt(h));
-    body.addEventListener('scroll',function(){
-        console.log('scrooll');
-    });
-    window.onscroll = function(){ FunctionScroll() }
-
-    function FunctionScroll(){
-        let hauteurScroll = window.pageYOffset;
-        console.log(hauteurScroll);
-        let up = document.getElementsByClassName('up_scroll')[0];
-        if(hauteurScroll < 500){
-        up.classList.add('hide');
-        }else{
-        up.classList.remove('hide');
-        }
-    }
-</script>
-
 </html>
