update from error text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             title="Photo de Cheikhou"> </h2>
                     <h1>Hi I'm Web Developer <small class="text-black">Full Stack</small></h1>
                     <h3>
-                        <cite> " Je n'ai vas pas travailler pour de l'argent mais je ne travaillerai pas pour rien. Je suis
+                        <cite> " Je ne vais pas travailler pour de l'argent mais je ne travaillerai pas pour rien. Je suis
                             toujours en train d'apprendre quelque chose "</cite> <b style="margin-left:10px;color:rgb(134, 111, 111)"> Charles Aznavour</b>
                     </h3>
                 </div>
