update from stacks

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         <div class="stack">
             <img src="/img/nodejs.png" width="80px" height="80px" title="Node Js" alt="">
         </div>
-        <div class="stack">
+        <!-- <div class="stack">
             <img src="/img/nest.png" width="90px" height="80px" title="Nest Js" alt="">
-        </div>
+        </div> -->
         <div class="stack">
             <img src="/img/mng.png" width="80px" height="80px" title="BAse de données MongoDB" alt="">
         </div>
@@ -159,9 +159,9 @@
         <div class="stack">
             <img src="/img/logo github.png" width="90px" height="80px" title="GitHub" alt="">
         </div>
-        <div class="stack">
+        <!-- <div class="stack">
             <img src="/img/bootstrap.jpg" width="80px" height="80px" title="Boostrap" alt="">
-        </div>
+        </div> -->
         <div class="stack">
             <img src="/img/tailwind.png" width="95px" height="80px" title="TailwindCSS" alt="">
         </div>
