update for the tips

--- a/index.html
+++ b/index.html
@@ -105,16 +105,6 @@
                 <li title="test">Présence Web</li>
             </ul>
         </div>
-        <div class="card card animate__animated animate__fadeIn animate__delay-3s">
-            <h2>Prod audiovisuelle</h2>
-            <ul>
-                <li>Publicité</li>
-                <li>Cartes de membres</li>
-                <li>Logos & flyers</li>
-                <li>Affiches</li>
-                <li>Maquette Web</li>
-            </ul>
-        </div>
     </div>
     <!-- Stack -->
     <h1 class="titre flex justify-evenly items-center">
@@ -141,9 +131,9 @@
         <div class="stack">
             <img src="/img/nodejs.png" width="80px" height="80px" title="Node Js" alt="">
         </div>
-        <!-- <div class="stack">
+        <div class="stack">
             <img src="/img/nest.png" width="90px" height="80px" title="Nest Js" alt="">
-        </div> -->
+        </div>
         <div class="stack">
             <img src="/img/mng.png" width="80px" height="80px" title="BAse de données MongoDB" alt="">
         </div>
@@ -157,11 +147,11 @@
             <img src="/img/logo css.webp" width="80px" height="80px" title="CSS" alt="">
         </div>
         <div class="stack">
-            <img src="/img/logo github.png" width="90px" height="80px" title="GitHub" alt="">
+            <img src="/img/git.jpg" width="90px" height="80px" title="GitHub" alt="">
         </div>
-        <!-- <div class="stack">
+        <div class="stack">
             <img src="/img/bootstrap.jpg" width="80px" height="80px" title="Boostrap" alt="">
-        </div> -->
+        </div>
         <div class="stack">
             <img src="/img/tailwind.png" width="95px" height="80px" title="TailwindCSS" alt="">
         </div>
@@ -191,6 +181,16 @@
             <div class="flex justify-between">
                 <!-- <span><a href="" title="lien du site"> <i class="fa-solid fa-globe"></i> </a></span>
                 <span><a href="" title="lien github"> <i class="fa-solid fa-link"></i> </a></span> -->
+            </div>
+        </div>
+        <div class="card">
+            <h2>Challenge intégration</h2>
+            <p>
+                J'ai vu une maquette dans le reseau social linkedin partagée pau ux designer. C'était pour un challenge de l'intégrer et de tester de nouveaux trucs et approfondir mes connaissances déjà acquises.
+            </p>
+            <div class="flex justify-between">
+                 <span><a href="https://challenge-integration.vercel.app/" target="_blank" title="lien du site"> <i class="fa-solid fa-globe"></i> </a></span>
+                <!--<span><a href="" title="lien github"> <i class="fa-solid fa-link"></i> </a></span> -->
             </div>
         </div>
         <div class="card">
