--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,13 +34,13 @@
                     <h2> <i class="fas fa-phone-square-alt mr-1"></i><a onclick="toggle()" href="#contact">Contact</a>
                     </h2>
                 </li>
-                <li class="animate__animated  animate__fadeIn">
+                <!-- <li class="animate__animated  animate__fadeIn">
                     <h2><i class="fas fa-briefcase mr-1"></i> <a onclick="toggle()" href="#projet">Réalisations</a>
                     </h2>
                 </li>
                 <li class="animate__animated  animate__fadeIn">
                     <h2><i class="fas fa-language mr-1"></i><a onclick="toggle()" href="#langue">Langues</a> </h2>
-                </li>
+                </li> -->
                 <li class="animate__animated animate__fadeIn">
                     <h2> <i class="fas fa-graduation-cap mr-1"></i><a onclick="toggle()"
                             href="#formation">Formations</a> </h2>
@@ -83,12 +84,14 @@
         </header>
     </div>
     <!-- services -->
-    <h1 class="titre flex justify-evenly items-center" align="center"c>
+    <h1 class="titre flex justify-evenly items-center" data-aos="fade-up"
+    data-aos-duration="2000" align="center"c>
         <img src="./img/services.svg" width="200" alt="">
         <span>Ce que je peux vous offrir !</span>
     </h1>
     <div class="flex justify-evenly items-center" id="services">
-        <div class="card animate__animated animate__fadeIn">
+        <div class="card animate__animated animate__fadeIn" data-aos="fade-up"
+        data-aos-duration="3000" >
             <h2>Solutions numériques</h2>
             <ul>
                 <li>Site Web</li>
@@ -97,7 +100,8 @@
                 <li>Administratin de base de données</li>
             </ul>
         </div>
-        <div class="card animate__animated animate__fadeIn animate__delay-2s">
+        <div class="card animate__animated animate__fadeIn animate__delay-2s" data-aos="fade-up"
+        data-aos-duration="3000">
             <h2>E-Marketing</h2>
             <ul>
                 <li>Communicatin digitale</li>
@@ -107,14 +111,17 @@
         </div>
     </div>
     <!-- Stack -->
-    <h1 class="titre flex justify-evenly items-center">
+    <h1 class="titre flex justify-evenly items-center" data-aos="fade-up"
+    data-aos-duration="2000">
         <img src="./img/stack.svg" width="200" alt="">
         <span>Mon plat préféré !</span>
     </h1>
-<p align="center">
+<p align="center" data-aos="fade-up"
+data-aos-duration="2000">
     Ceux sont les différents technologies que j'utilise pour concevoir mes applications ou sites web. Les technologies utilisés dépendent en grande partie du types de projets.
 </p>
-    <div class="flex justify-evenly items-center" id="stack">
+    <div class="flex justify-evenly items-center" id="stack" data-aos="fade-up"
+    data-aos-duration="2000">
         <div class="stack">
             <img src="/img/logo_php.jpg" width="80px" height="80px" title="Php" alt="">
         </div>
@@ -157,12 +164,14 @@
         </div>
     </div>
     <!-- Projet -->
-    <h1 class="titre flex justify-evenly items-center">
+    <h1 class="titre flex justify-evenly items-center" data-aos="fade-up"
+    data-aos-duration="2000">
         <img src="./img/projet.svg" width="200" alt="">
         <span>Mes Réalisations </span>
     </h1>
     <div class="flex justify-evenly items-center" id="projet">
-        <div class="card">
+        <div class="card" data-aos="fade-up"
+        data-aos-duration="3000">
             <h2>Niama App</h2>
             <p>
                 Dans le cadre de mon projet de mémoire de master II. J'avais développé une application qui permettrait de gérer la gestion des faits d'état civil dans une mairie.
@@ -173,7 +182,8 @@
                 <span><a href="https://github.com/Diokou-Tech/Niama" target="_blank"> <i class="fa-solid fa-link"></i> </a></span>
             </div>
         </div>
-        <div class="card">
+        <div class="card" data-aos="fade-up"
+        data-aos-duration="2000">
             <h2>Nekk Dev</h2>
             <p>
                 Elle est toujours en cours de développement. Cette plateforme permettra de regrouper les développeurs africains surtout sénégalais. Cet site sera en quelque sorte une de stackverflow personnel combiné à OpenCLassroom. Let's GO.
@@ -183,7 +193,8 @@
                 <span><a href="" title="lien github"> <i class="fa-solid fa-link"></i> </a></span> -->
             </div>
         </div>
-        <div class="card">
+        <div class="card" data-aos="fade-up"
+        data-aos-duration="1000">
             <h2>Challenge intégration</h2>
             <p>
                 J'ai vu une maquette dans le reseau social linkedin partagée pau ux designer. C'était pour un challenge de l'intégrer et de tester de nouveaux trucs et approfondir mes connaissances déjà acquises.
@@ -193,10 +204,12 @@
                 <!--<span><a href="" title="lien github"> <i class="fa-solid fa-link"></i> </a></span> -->
             </div>
         </div>
-        <div class="card">
+        <div class="card" data-aos="fade-up"
+        data-aos-duration="500">
             <h2>Lemgui</h2>
             <p>
               A travers la formation en développement web de la sonatel academy, on nous avait demander de reproduire un site en nous donnant le lien du site.
+              Nous l'avions fait avec uniquement du HTML/CSS pure.
             </p>
             <div class="flex justify-between">
                 <span><a href="https://lemgui.vercel.app/" target="_blank" title="lien du site"> <i class="fa-solid fa-globe"></i> </a></span>
@@ -206,11 +219,13 @@
     </div>
     <!-- contact -->
     <h1 class="titre flex justify-evenly items-center">
-        <img src="./img/contact.svg" width="200" alt="">
+        <img src="./img/contact.svg" data-aos="fade-up"
+    data-aos-duration="2000" width="200" alt="">
         <span>Me contacter !</span>
     </h1>
     <div class="flex justify-evenly items-center" id="contact">
-        <div class="card">
+        <div class="card" data-aos="fade-up"
+        data-aos-duration="2000">
             <H2>Réseaux Sociaux</H2>
             <ul type="none">
                 <li> <a target="_blank" href="https://www.linkedin.com/in/cheikhou-diokou/" title="linkedin"><i
@@ -222,7 +237,8 @@
                 <li><a target="_blank" href="#" title="instagram"> <i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </div>
-        <div class="card">
+        <div class="card" data-aos="fade-up"
+        data-aos-duration="2000">
             <H2>Perso</H2>
                 <p> <i class="fa-solid fa-envelope"></i> :  diokoutech@gmail.com </p>
                 <p><i class="fa fa-phone"> : +221 76 576 54 04</i></p>
@@ -233,6 +249,7 @@
     <footer>
         <h5 class="footer">&copy; Diokou Cheikhou - 2022</h5>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js" defer></script>
 </body>
 </html>
